	    * -cont-color: allows the continuation marker to be a
	      different color than the logfile text
	- changed the code around quite a lot - it no longer
	  continually deletes lines and re-adds them, and the main
	  structure is now a linked list rather than an array.  the
	  continuation marker is added at display time, rather than
	  being in the strings of the datastructure.

1.0   Fri Apr  2 03:37:56 CEST 2004
	- fix a bug regarding long (>1023 bytes) lines.
        - c89 compatibility fixes by Seth W. Klein.
        - fix a memleak.

0.95  Thu Apr  1 00:39:08 CEST 2004
        - -geometry now expects _pixels_ not _characters_.
        - sped up redraws considerably (depending on xserver).
        - i18n: locale settings for multibyte characters are respected.
        - proportional fonts are supported now.
	- supports options as --long options now.
	- force initial call to redraw().
	- added options:
	    * -whole : to only display lines once they are \n terminated
	    * -partial: to display lines whether they are terminated or not
	    * -update: to attempt to complete old partial lines 'in-place'
	    * -cont: to specify a string to prefix 'broken' partial lines with
            * -outline: black outline (relatively slow).
            * -noflicker: slower but flickerfree update.
	    * -wordwrap: wrap at spaces to avoid breaking words
	- document default interval of 2.4 seconds.
	- set default 'reload' value to 0 to prevent reloads.
	- updated man page.
	- strict-aliasing fix suggested by mmj.
	- improved regexp transform code, but not enough...
	- --frame now draws the frame in exactly the right place, just
	  inside the window (previously a geometry of 1024x768+0+0 would
	  have its frame off-screen on my monitor)
        - the code takes the --shade and --outline options into
	  account properly when wrapping, clearing text, etc. and so
	  no 'debris' pixels are left behind any more.

0.9  Wed Feb 25 15:25:49 CET 2004